# compiler-cpp-LAII

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  codigo.txt  entrada.txt  log.txt  main.cpp  test_lexer  test_parser
include/: asm_generator.hpp  ast.hpp  astprinter.hpp  error_reporter.hpp  ir_generator.hpp  ir_optimizer.hpp  jsonexporter.hpp  lexer.hpp  logger.hpp  parser.hpp  symbol.hpp  symbol_table.hpp  token.hpp  utils.hpp
java-interface/: pom.xml
java-interface/src/main/java/: module-info.java
java-interface/src/main/java/org/example/automatas2_rgg/: ArbolDeDerivacion.java  ArbolDerivacionController.java  HelloApplication.java  HelloController.java
java-interface/src/main/java/org/example/automatas2_rgg/controllers/: ArbolDerivacionController.java  GramaticaController.java  HelloController.java  InformacionController.java  PDFController.java
java-interface/src/main/java/org/example/automatas2_rgg/models/: SymbolTableModel.java  TokenModel.java
java-interface/src/main/java/org/example/automatas2_rgg/services/: CompilerService.java
java-interface/src/main/java/org/example/automatas2_rgg/utils/: FileUtils.java
java-interface/src/main/resources/data/: arbol_derivacion.txt  codigo_ensamblador.txt  codigo_fuente.txt  codigo_intermedio.txt  gramatica.txt  tabla_simbolos.txt
java-interface/src/main/resources/org/example/automatas2_rgg/: ArbolDerivacion.fxml  gramatica-view.fxml  hello-view.fxml  informacion-view.fxml
java-interface/src/main/resources/org/example/automatas2_rgg/css/: estilos.css  infostyle.css
output/: ast.json  ir.txt  lexer.txt  tabla_simbolos.txt
src/: asm_generator.cpp  astprinter.cpp  error_reporter.cpp  ir_generator.cpp  ir_optimizer.cpp  jsonexporter.cpp  lexer.cpp  logger.cpp  parser.cpp  symbol.cpp  symbol_table.cpp  token.cpp  utils.cpp
test/: entrada.txt  hola.txt  invalid_code.txt  ir_optimize.txt  test_asm.txt  valid1.txt  valid_code.txt
test/lexer/: test_lexer.cpp
test/parser/: test_parser.cpp  valid_all_input_token.txt
